tests/checker/diagnostics/0997_mli_unary_type_overapplied_10.mli.infer.expected
File "0997_mli_unary_type_overapplied_10.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0997_mli_unary_type_overapplied_10 is not a valid module name.

File "0997_mli_unary_type_overapplied_10.mli", line 2, characters 14-36:
2 | val x_kappa : (int, bool) wrap_kappa
                  ^^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor wrap_kappa expects 1 argument(s),
       but is here applied to 2 argument(s)
